[gd_scene load_steps=6 format=3 uid="uid://c2ycfy8bmawyv"]

[ext_resource type="Script" path="res://Scenes/Options.gd" id="1_1s2fr"]
[ext_resource type="Texture2D" uid="uid://bb20u68d4kiya" path="res://assets/Gun_MainMenu.aseprite.png" id="2_7g4we"]

[sub_resource type="AtlasTexture" id="AtlasTexture_koamd"]
atlas = ExtResource("2_7g4we")
region = Rect2(0, 31, 47, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbrdb"]
atlas = ExtResource("2_7g4we")
region = Rect2(0, 3, 47, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5nfi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_koamd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbrdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koamd")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1s2fr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 102.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master"

[node name="Master" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music
"

[node name="Music" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Voice
"

[node name="Voice" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SFX
"

[node name="SFX" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Back_Main_Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 599.0
offset_right = 82.0
offset_bottom = 645.0
text = "Back"

[node name="Gun" type="AnimatedSprite2D" parent="."]
position = Vector2(525.808, 218.12)
scale = Vector2(1.28825, 1.23724)
sprite_frames = SubResource("SpriteFrames_p5nfi")
offset = Vector2(24, 15)

[connection signal="value_changed" from="VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Voice" to="." method="_on_voice_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Back_Main_Menu" to="." method="_on_back_main_menu_pressed"]
